--- a/semana3.html
+++ b/semana3.html
@@ -145,14 +145,12 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-0 left-align-p">
-								<p>1.Organización Mundial de la Salud. (2013). International Perspectives on Spinal Cord Injury. Summary. 2014, de Swiss Paraplegic Research (SPF)</p>
-							 <p>2.Forner Cordero, Isabel. (2005). Tratamiento conservador versus quirurgico de la paraplejia traumática por fracturas torácicas y lumbares.. 17-06-2005, de Universitat de València. Departament de Medicina</p>
-							 <p>3.Cohen ME, Ditunno JF, Donovan WH, Maynard FM. A test of the 1992 International Standards for neurological and functional classification of spinal cord injury. Spinal cord. 1998;36:554-60.</p>
-                                                         <p>4.Organización Mundial de la Salud. (2013, 19 noviembre). Lesiones medulares. 16 marzo, 2019</p>
-							  <p>5.Mayo Clinic. (2017a, 19 diciembre). Lesiones de la médula espinal - Síntomas y causas - Mayo Clinic. 16 marzo, 2019.</p>
-							  <p>6.Personal de Mayo Clinic. (2017). Lesiones de la médula espinal. marzo 15,2019, de Mayo Clinic.</p>
-							  <p>7.Yolanda Smith. (2018). Complicaciones de la paraplejia. marzo 15,2019, de News Medical.</p>
-					</div>
+								<p>1. Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
+							 <p>2. T. Taiming Chu ,Biomechanics of ankle-foot orthoses:past, present, and future.Top Stroke Rehabil, 7 (2001), pp. 19-28.</p>
+							 <p>3. Unidad de Lesionados Medulares de Gran Canaria. (2018). Manual de Lesionados Medulares . Las Palmas de Gran Canaria: caleidoscopio.</p>
+                                                         <p>4. José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
+							  <p>5. Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
+					                  </div>
 					        </div>
 					</div>				
 		</body>
