--- a/semana3.html
+++ b/semana3.html
@@ -90,7 +90,7 @@
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">REHABILITACIÓN</h1>	
+					<h2 class="text-black">REHABILITACIÓN</h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
@@ -136,6 +136,79 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/ortesis3.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+					<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">REQUERIMIENTOS PARA EL DISEÑO DE LA ÓRTESIS</h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			
+			<!-- Start Align Area -->
+			<div class="row">
+		        <div class="col-md-3">
+		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+					<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">PROPUESTAS DE SOLUCIÓN</h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			
+			<!-- Start Align Area -->
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">DYNAMIC WALKAIDE</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Ortesis de tobillo y pie( Dynamic Walk) fusionada con un sistema estimulador neuromuscular (Walkaide).</p>
+ 
+<p>Características :</p>
+<p>Ortesis diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas, manteniendo la posición dinámica del conjunto pie-tobillo.</p>
+<p>Fabricada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformacion.</p>
+<p>Su diseño con el talón abierto proporciona un óptimo ajuste y confort para los diferentes tipos de calzado.</p>
+<p>WalkAide estimula eléctricamente los músculos apropiados que causan la dorsiflexión del tobillo y así se puede mejorar la capacidad de andar del paciente.</p>
+<p>Previene la debilidad o falta de uso del músculo, un mayor flujo sanguíneo local, el fortalecimiento del músculo y un rango de movimiento articular igual o superior</p>
+								</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/sol1.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+				<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">REWALK (RGO)</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-20 left-align-p">
+								<p>El sistema ReWalkTM, también llamado exoesqueleto, es una ortesis de marcha alternante (RGO) motorizada. Está constituido por unos soportes motorizados de activación del movimiento que se colocan en las extremidades inferiores, una plataforma dinámica para evitar el pie equino,unos sensores de movimiento, un arnés y una mochila que transporta un procesador y dos baterías recargables. El paciente ordena los movimientos a través de un control remoto colocado en la muñeca y se ayuda de muletas para mantener el equilibrio. Tras programar el tipo de movimiento (ponerse de pie, sentarse, caminar, pararse, subir y bajar escaleras), los sensores detectan la inclinación del tronco hacia delante, y transmiten una señal para el inicio de la deambulación. La velocidad de marcha del dispositivo se modifica en función de las necesidades de la persona.</p>
+                                                         </div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/sol2.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+			        <div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">ORTESIS TOBILLO PIE DINÁMICO</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Ortesis antiequina dinámica y de bajo costo capaz de realizar movimientos tanto en el plano transversal(abducción y aducción ) como en el sagital(flexión dorsal y flexión plantar) gracias a un elástico con el cual se realizará la tracción  q, este se encuentra ubicado por encima de los maleolos del pie la cual permitirá movimientos en el plano sagital ,a su vez este elástico rodeará la cincha supramaleolar permitiendo los movimientos transversales  de 3 componentes, una cincha supramaleolar por encima de los maléolos ,un elástico que permita la tracción y un soporte de unión antideslizante</p>
+						         </div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/sol3.png" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
