--- a/semana3.html
+++ b/semana3.html
@@ -99,14 +99,13 @@
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h2 class="mb-30">DINAMIC WALK</h2>
-						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Nueva ortesis de tobillo y pie que asiste a la dorsiflexión del pie, evitando el equinismo. Realizada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformación. Diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas, manteniendo la posición dinámica del conjunto pie-tobillo Su diseño con el talón abierto nos proporciona un óptimo ajuste y confort para los diferentes tipos de calzado. Posibilidad de almohadilla para mayor confort del paciente,con tirantes en la zona lateral, fácil de quitarse y ponerse,se adapta fácilmente a calzado normal / extrecho.</p>
-								</div>
-							<div class="row">
+						<h3 class="mb-30">DINAMIC WALK</h3>
+						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/ortesis1.png" alt="" class="png-fluid">
+								<img src="img/elements/ortesis1.jpg" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Nueva ortesis de tobillo y pie que asiste a la dorsiflexión del pie, evitando el equinismo. Realizada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformación. Diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas, manteniendo la posición dinámica del conjunto pie-tobillo Su diseño con el talón abierto nos proporciona un óptimo ajuste y confort para los diferentes tipos de calzado. Posibilidad de almohadilla para mayor confort del paciente,con tirantes en la zona lateral, fácil de quitarse y ponerse,se adapta fácilmente a calzado normal / extrecho.</p>
 							</div>
 						</div>
 					</div>
