--- a/semana3.html
+++ b/semana3.html
@@ -174,7 +174,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			</section>
 			<!-- End Sample Area -->
 			
-			<!-- Start Align Area -->
+			<!-- Start Align Area -->	
 			<div class="row">
 		        <div class="col-md-3">
 		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
@@ -190,6 +190,22 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			<!-- End Sample Area -->
 			
 			<!-- Start Align Area -->
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">DYNAMIC WALKAIDE</h3>
+						<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/sol1.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Ortesis de tobillo y pie( Dynamic Walk) fusionada con un sistema estimulador neuromuscular (Walkaide).</p>
+								<p>Características :</p>
+							<p>•Ortesis diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas,manteniendo la posición dinámica del conjunto pie-tobillo. </p>
+						<p>•Fabricada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformacion.</p>
+						<p>•Su diseño con el talón abierto proporciona un óptimo ajuste y confort para los diferentes tipos de calzado.</p>
+						<p>•WalkAide estimula eléctricamente los músculos apropiados que causan la dorsiflexión del tobillo y así se puede mejorar la capacidad de andar del paciente.</p>
+					 <p>•Previene la debilidad o falta de uso del músculo, un mayor flujo sanguíneo local, el fortalecimiento del músculo y un rango de movimiento articular igual o superior</p>
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
