--- a/events.html
+++ b/events.html
@@ -93,7 +93,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sema1.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
@@ -105,7 +105,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem2.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Marzo, 2019</p>
@@ -118,7 +118,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem3.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
@@ -131,7 +131,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem4.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
@@ -143,7 +143,7 @@
 							<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem4.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
@@ -155,7 +155,7 @@
 						<div class="col-lg-6 pb-30">
 							<div class="single-carusel row align-items-center">
 								<div class="col-12 col-md-6 thumb">
-									<img class="img-fluid" src="img/sem4.PNG" alt="">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
