--- a/semana4.html
+++ b/semana4.html
@@ -94,160 +94,13 @@
 			</section>
 			<!-- End Sample Area -->
 			<!-- Start Align Area -->
-			<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
-						<h3 class="mb-30">Incidencia</h3>
-						<div class="row">
-							<div class="col-md-3">
-								<img src="img/elements/d.jpg" alt="" class="img-fluid">
-							</div>
-							<div class="col-md-9 mt-sm-20 left-align-p">
-								<p>En el mundo La incidencia de la lesión de medula espinal(LME), tanto traumáticas como no traumáticas, probablemente se sitúe entre 40 y80 casos por millón de habitantes. 
-									Sobre la base de la población mundial estimada en 2012, esto significa que, cada año, entre 250.000 y 500.000 personas sufren una LME.</p>
-								<p>De acuerdo con el Compendio de Estadistico 2000-2017 (Registro Nacional de la Persona con Discapacidad) .Durante el año 2017 se han inscrito personas con diferentes diagnósticos de daño, destacando el diagnóstico de daño que con mayor frecuencia afecta principalmente a la función motora, 
-									que afecta a 118, 664 personas inscritas en el Registro Nacional de las Personas con discapacidad.</p>
-							</div>
-						</div>
-					</div>
-					<div class="section-top-border text-right">
-						<h3 class="mb-30">Right Aligned</h3>
-						<div class="row">
-							<div class="col-md-9">
-								<p class="text-right">Over time, even the most sophisticated, memory packed computer can begin to run slow if we don’t do something to prevent it. The reason why has less to do with how computers are made and how they age and more to do with the way we use them. You see, all of the daily tasks that we do on our PC from running programs to downloading and deleting software can make our computer sluggish. To keep this from happening, you need to understand the reasons why your PC is getting slower and do something to keep your PC running at its best. You can do this through regular maintenance and PC performance optimization programs</p>
-								<p class="text-right">Before we discuss all of the things that could be affecting your PC’s performance, let’s talk a little about what symptoms</p>
-							</div>
-							<div class="col-md-3">
-								<img src="img/elements/d.jpg" alt="" class="img-fluid">
-							</div>
-						</div>
-					</div>
-					<div class="section-top-border">
-						<h3 class="mb-30">Definition</h3>
-						<div class="row">
-							<div class="col-md-4">
-								<div class="single-defination">
-									<h4 class="mb-20">Definition 01</h4>
-									<p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks</p>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="single-defination">
-									<h4 class="mb-20">Definition 02</h4>
-									<p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks</p>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="single-defination">
-									<h4 class="mb-20">Definition 03</h4>
-									<p>Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="section-top-border">
-						<h3 class="mb-30">Block Quotes</h3>
-						<div class="row">
-							<div class="col-lg-12">
-								<blockquote class="generic-blockquote">
-									“Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me. Listed in this article are the electronic banking” 
-								</blockquote>
-							</div>
-						</div>
-					</div>
-					<div class="section-top-border">
-						<h3 class="mb-30">Table</h3>
-						<div class="progress-table-wrap">
-							<div class="progress-table">
-								<div class="table-head">
-									<div class="serial">#</div>
-									<div class="country">Countries</div>
-									<div class="visit">Visits</div>
-									<div class="percentage">Percentages</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">01</div>
-									<div class="country"> <img src="img/elements/f1.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-1" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">02</div>
-									<div class="country"> <img src="img/elements/f2.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-2" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">03</div>
-									<div class="country"> <img src="img/elements/f3.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-3" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">04</div>
-									<div class="country"> <img src="img/elements/f4.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-4" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">05</div>
-									<div class="country"> <img src="img/elements/f5.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-5" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">06</div>
-									<div class="country"> <img src="img/elements/f6.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-6" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">07</div>
-									<div class="country"> <img src="img/elements/f7.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-7" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="table-row">
-									<div class="serial">08</div>
-									<div class="country"> <img src="img/elements/f8.jpg" alt="flag">Canada</div>
-									<div class="visit">645032</div>
-									<div class="percentage">
-										<div class="progress">
-											<div class="progress-bar color-8" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+				 <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-black">PLAN DE TRABAJO</h1>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			
 					<div class="section-top-border">
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
