--- a/semana4.html
+++ b/semana4.html
@@ -98,25 +98,23 @@
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
-							</div>
-			<!-- End Sample Area -->				
-			<!-- Start Align Area -->
+								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono.png.png);"></div></a>
+						          </div>
+					        </div>
+					</div>
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-black">PLAN DE TRABAJO</h1>	
 				</div>
 			</section>
-			<!-- End Sample Area -->
-			<!-- Start Align Area -->
-			
 					<div class="section-top-border">
 						<h3>Image Gallery</h3>
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/g1.jpg);"></div></a>
+								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png.jpg);"></div></a>
 							</div>
-							<!-- End Sample Area -->
+						</div>
+					</div>
 
 		</body>
 	</html>
